<resources>
    <string name="app_name">Restaurant Menu</string>
    <string name="meals">Meals</string>
    <string name="sandwiches">Sandwiches</string>
    <string name="appetizers">Appetizers</string>
    <string name="drinks">Drinks</string>
    <string name="cart">Cart</string>
    <string name="meals_appear">The meals you add will appear here.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="you_have_account">Do you have an account?</string>
    <string name="or">OR</string>
    <string name="total_price">Total Price is $</string>
    <string name="password_check">Password must be between 6 and 20 Characters.</string>
    <string name="email_check">Email must be valid.</string>
    <string name="email_exist">The email is linked to another account!</string>
</resources>