<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/page_padding">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/iv_icon_size"
            android:layout_height="@dimen/iv_icon_size"
            android:layout_marginTop="@dimen/iv_icon_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/app_icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_text_margin_top"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:layout_marginTop="@dimen/et_margin_top"
            android:background="@drawable/edit_text_background"
            android:gravity="start|center_vertical"
            android:inputType="textPersonName"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/hint_text_margin"
            android:layout_marginTop="@dimen/hint_text_margin"
            android:text=""
            android:textColor="@color/colorYalow"
            android:textSize="@dimen/hint_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_text_margin_top"
            android:text="@string/email"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:layout_marginTop="@dimen/et_margin_top"
            android:background="@drawable/edit_text_background"
            android:gravity="start|center_vertical"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/hint_text_margin"
            android:layout_marginTop="@dimen/hint_text_margin"
            android:text=""
            android:textColor="@color/colorYalow"
            android:textSize="@dimen/hint_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_text_margin_top"
            android:text="@string/password"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:layout_marginTop="@dimen/et_margin_top"
            android:background="@drawable/edit_text_background"
            android:gravity="start|center_vertical"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/iv_password_margin_end"
            app:layout_constraintBottom_toBottomOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintTop_toTopOf="@+id/et_password"
            app:srcCompat="@drawable/ic_visibility" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/hint_text_margin"
            android:layout_marginTop="@dimen/hint_text_margin"
            android:text=""
            android:textColor="@color/colorYalow"
            android:textSize="@dimen/hint_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Button
            android:id="@+id/bt_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bt_margin_top"
            android:background="@drawable/button_background"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/bt_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_sign_up">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/you_have_account"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/account_text_size" />

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="4dp"
                android:text="@string/sign_in"
                android:textColor="@color/colorYalow"
                android:textSize="@dimen/account_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>