<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/page_padding">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/iv_icon_size"
            android:layout_height="@dimen/iv_icon_size"
            android:layout_marginTop="@dimen/iv_icon_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/app_icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_text_margin_top"
            android:text="@string/email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:layout_marginTop="@dimen/et_margin_top"
            android:background="@drawable/edit_text_background"
            android:gravity="start|center_vertical"
            android:textColor="@color/colorAccent"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/hint_text_margin"
            android:layout_marginTop="@dimen/hint_text_margin"
            android:text=""
            android:textColor="@color/colorYalow"
            android:textSize="@dimen/hint_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_text_margin_top"
            android:text="@string/password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:layout_marginTop="@dimen/et_margin_top"
            android:gravity="start|center_vertical"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/iv_password_margin_end"
            app:layout_constraintBottom_toBottomOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintTop_toTopOf="@+id/et_password"
            app:srcCompat="@drawable/ic_visibility" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/hint_text_margin"
            android:layout_marginTop="@dimen/hint_text_margin"
            android:text=""
            android:textColor="@color/colorYalow"
            android:textSize="@dimen/hint_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Button
            android:id="@+id/bt_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bt_margin_top"
            android:text="@string/sign_in"
            android:textSize="@dimen/bt_text_size"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_sign_in"
            tools:ignore="MissingConstraints">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/view_height"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/view_height"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/sign_up_background"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/bt_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>