<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        app:title="@string/app_name"
        android:theme="@style/MyToolBarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_meals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/meal_card_margin"
                android:layout_marginTop="@dimen/meal_card_margin"
                android:layout_marginEnd="@dimen/meal_card_margin"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/meal_card_corner">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/meal_image_height"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/meals" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/meal_text_margin"
                        android:layout_marginBottom="@dimen/meal_text_margin"
                        android:gravity="center"
                        android:text="@string/meals"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/meal_text_size" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_sandwiches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/meal_card_margin"
                android:layout_marginTop="@dimen/meal_card_margin"
                android:layout_marginEnd="@dimen/meal_card_margin"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/meal_card_corner">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/meal_image_height"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/sandwiches" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/meal_text_margin"
                        android:layout_marginBottom="@dimen/meal_text_margin"
                        android:gravity="center"
                        android:text="@string/sandwiches"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/meal_text_size" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_appetizers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/meal_card_margin"
                android:layout_marginTop="@dimen/meal_card_margin"
                android:layout_marginEnd="@dimen/meal_card_margin"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/meal_card_corner">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/meal_image_height"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/appetizers" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/meal_text_margin"
                        android:layout_marginBottom="@dimen/meal_text_margin"
                        android:gravity="center"
                        android:text="@string/appetizers"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/meal_text_size" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_drinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/meal_card_margin"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/meal_card_corner">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/meal_image_height"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/drinks" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/meal_text_margin"
                        android:layout_marginBottom="@dimen/meal_text_margin"
                        android:gravity="center"
                        android:text="@string/drinks"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/meal_text_size" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>